--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="fontawesome-free-5.11.2-web/css/all.min.css">
         <link rel= "stylesheet" href="webpage.css">
         <title>that moment</title>
+        <script data-ad-client="ca-pub-8347671005305298" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </head>
     <body>
 
