--- a/join.html
+++ b/join.html
@@ -17,8 +17,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <div class="w3-top">
         <div class="w3-bar w3-green w3-card w3-left-align w3-large">
           <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-green" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-          <a href="index.html" class="w3-bar-item w3-button w3-padding-large">Home</a>
-          <a href="PL.html" class="w3-bar-item w3-button w3-hide-small w3-white w3-padding-large w3-hover-white">Programming Language</a>
+          <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+          <a href="PL.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Programming Language</a>
           <a href="videos.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Videos</a>
           <a href="jokes.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Jokes</a>
           <a href="stories.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Stories</a>
@@ -28,27 +28,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       
         <!-- Navbar on small screens -->
         <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-          <a href="#" class="w3-bar-item w3-button w3-padding-large">Programmng Language</a>
-          <a href="#" class="w3-bar-item w3-button w3-padding-large">Videos</a>
-          <a href="#" class="w3-bar-item w3-button w3-padding-large">Jokes</a>
-          <a href="#" class="w3-bar-item w3-button w3-padding-large">Stories</a>
-          <a href="#" class="w3-bar-item w3-button w3-padding-large">Bitcoin</a>
-          <a href="#" class="w3-bar-item w3-button w3-padding-large">Join us</a>
+          <a href="PL.html" class="w3-bar-item w3-button w3-padding-large">Programmng Language</a>
+          <a href="videos.html" class="w3-bar-item w3-button w3-padding-large">Videos</a>
+          <a href="jokes.html" class="w3-bar-item w3-button w3-padding-large">Jokes</a>
+          <a href="stories.html" class="w3-bar-item w3-button w3-padding-large">Stories</a>
+          <a href="bitcoin.html" class="w3-bar-item w3-button w3-padding-large">Bitcoin</a>
+          <a href="join.html" class="w3-bar-item w3-button w3-padding-large">Join us</a>
         </div>
       </div>
 
 <!-- Header -->
 <header class="w3-container w3-green w3-center" style="padding:128px 16px">
   <h1 class="w3-margin w3-jumbo" style="font-family: 'Courier New', Courier, monospace;">THAT MOMENT <abbr title="That Moment">TM</abbr></h1>
-  <p class="w3-xlarge">Welcome To That Moment's Programming Language</p>
+  <p class="w3-xlarge">Welcome To That Moment</p>
+  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Get Started</button>
 </header>
-<body>
-    <h1>Which of the programming languages would you like to learn?</h1>
-    <button class="w3-button w3-black w3-padding-large w3-large w3-card w3-margin-top"><a href="mainpython.html">Python</a></button>
-    <button class="w3-button w3-black w3-padding-large w3-large w3-card w3-margin-top"><a href="">javascript</a></button>
-    <button class="w3-button w3-black w3-padding-large w3-large w3-card w3-margin-top"><a href="">Html</a></button>
-    <button class="w3-button w3-black w3-padding-large w3-large w3-card w3-margin-top"><a href="">Css</a></button>
-</body>
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity">  
